--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 0;
+}
+
+::-webkit-scrollbar, ::-webkit-scrollbar-track {
+  @apply bg-gray-600;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-300;
+}
+
+::-webkit-scrollbar, ::-webkit-scrollbar-track {
+  @apply bg-gray-600;
+}
