--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,8 @@
   height: 0;
 }
 
-::-webkit-scrollbar, ::-webkit-scrollbar-track {
+::-webkit-scrollbar,
+::-webkit-scrollbar-track {
   @apply bg-gray-600;
 }
 
@@ -15,6 +16,7 @@
   @apply bg-gray-300;
 }
 
-::-webkit-scrollbar, ::-webkit-scrollbar-track {
+::-webkit-scrollbar,
+::-webkit-scrollbar-track {
   @apply bg-gray-600;
 }
